[package]
name = "postgres-ntex-rustls"
version = "0.1.0"
authors = ["Seven Eda <53v3n3d4@gmail.com>"]
edition = "2021"

[dependencies]
config = "0.14.1"
deadpool-postgres =  { version = "0.14.0", features = ["serde"] }
dotenvy = "0.15.7"
ntex = { version = "2.8.0", features = ["tokio"] }
rustls = "0.23.17"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1"] }
tokio-postgres-rustls = "0.13.0"
uuid = { version = "1.11.0", features = ["serde"] }
